# onnx_vehicle_plate_recognition

./: .gitignore  CLAUDE.md  README.md  eval.py  log.txt  main.py  pyproject.toml  requirements.txt  run.sh
docs/: evaluation_guide.md
docs/polygraphy使用指南/: README.md  check.md  convert.md  debug.md  inspect.md  run.md  surgeon.md
docs/polygraphy使用指南/examples/api/: lazy_module.md
docs/polygraphy使用指南/examples/api/00_inference_with_tensorrt/: README.md  build_and_run.py  load_and_run.py
docs/polygraphy使用指南/examples/api/01_comparing_frameworks/: README.md  example.py
docs/polygraphy使用指南/examples/cli/: README.md
docs/polygraphy使用指南/how-to/: README.md  debug_accuracy.md  use_custom_input_data.md  use_debug_reduce_effectively.md  use_debug_subtools_effectively.md  work_with_reduced_precision.md
infer_onnx/: __init__.py  det_onnx.py  ocr_onnx.py  utils.py  yolo_models.py  yolo_rtdetr_onnx.py
mcp_vehicle_detection/: main.py  pyproject.toml  quick_test.py  requirements.txt  server.py  test_config_load.py
mcp_vehicle_detection/mcp_utils/: __init__.py  image_processor.py  unified_detection.py  validation.py
mcp_vehicle_detection/models/: __init__.py  config_models.py  detection_models.py
mcp_vehicle_detection/services/: __init__.py  detection_service.py  session_manager.py
runs/: result.json
test/: check_cv.py
tools/: build_engine.cpp  build_trt_engine.py
utils/: __init__.py  detection_metrics.py  drawing.py  image_processing.py  logging_config.py  nms.py  ocr_image_processing.py  ocr_post_processing.py  pipeline.py
(+52 files in other folders)
